[package]
name = "antigen"
version = "0.1.0"
authors = ["Josh Palmer <jpalmerwatkins@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
deebs = { path = "../deebs" }
cons = { path = "../cons" }
cons_char_image = { path = "../cons_char_image" }
task_graph = { path = "../task_graph" }