[package]
name = "deebs"
version = "0.1.0"
authors = ["Josh Palmer <jpalmerwatkins@gmail.com>"]
edition = "2018"

[features]
default = ["serde"]

[dependencies]
cons = { path = "../cons" }
cons_char_image = { path = "../cons_char_image" }
typenum = "1.12.0"
serde = { version = "1.0.124", features = ["derive"], optional = true }

async-std = "1.9.0"
futures = "0.3.13"
async-trait = "0.1.48"